# scaffold-fastapi

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
x-project/: pyproject.toml
x-project/src/: app.py
x-project/tests/: test_app.py
